--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=80
+
+#Se deja de usar el cache mientras esta en desarrollo el sistema
+#Cuando el sistema pasa a produccion, el cache se habilita
+spring.thymeleaf.cache=false
