--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,15 @@
             <artifactId>webjars-locator</artifactId>
             <version>0.47</version>
         </dependency>
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
         
     </dependencies>
 
