--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,14 @@
             <version>9.1.1</version>
         </dependency>
         
-        
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.thymeleaf.extras</groupId>
+            <artifactId>thymeleaf-extras-springsecurity6</artifactId>
+        </dependency>
          
     </dependencies>
 
